--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Church Songbook - 100 Hymns</title>
+    <title>NJC Songbook - 100 Hymns</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>✞ Digital Hymnal ✞</h1>
+        <h1>✞ NJC SongBook ✞</h1>
         <div class="search-container">
             <input type="text" id="search" placeholder="Search hymns by title or number...">
             <button id="darkModeToggle">🌓</button>
