--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -19,6 +19,8 @@
         <div class="controls">
             <a href="../index.html" class="print-btn">← Back</a>
             <button onclick="window.print()" class="print-btn">Print</button>
+            <button id="fontSizeToggle" class="font-btn">A+</button>
+
             <button onclick="toggleFontSize()" class="font-btn">A+</button>
         </div>
 
