--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Amazing Grace</title>
+    <title>இரத்தக் கோட்டைக்குள்ளே</title>
     <link rel="stylesheet" href="../styles.css">
     <style>
         .font-large {
@@ -18,16 +18,41 @@
             <button class="lyrics-button" onclick="window.print()">Print</button>
         </div>
 
-        <h1>Amazing Grace</h1>
+        <h1>இரத்தக் கோட்டைக்குள்ளே</h1>
         <div class="song-meta">
             <p>CCLI #12345 • John Newton • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
-            Amazing grace! How sweet the sound
-            That saved a wretch like me!
-            I once was lost, but now am found;
-            Was blind, but now I see.
+            இரத்தக் கோட்டைக்குள்ளே
+நான் நுழைந்து விட்டேன்
+இனி எதுவும் அணுகாது
+எந்தத் தீங்கும் தீண்டாது
+
+1. நேசரின் இரத்தம் என்மேலே
+நெருங்காது சாத்தான்
+பாசமாய் சிலுவையில் பலியானார்
+பாவத்தை வென்று விட்டார்
+
+2. இம்மட்டும் உதவின எபினேசரே
+இனியும் காத்திடுவார்
+உலகிலே இருக்கும் அவனை விட
+என் தேவன் பெரியவரே
+
+3. தேவனே ஒளியும் மீட்புமானார்
+யாருக்கு அஞ்சிடுவேன்
+அவரே என் வாழ்வின் பெலனானார்
+யாருக்கு பயப்படுவேன்
+
+4. தாய் தன் பிள்ளையை மறந்தாலும்
+மறவாத என் நேசரே
+ஆயனைப் போல நடத்துகிறீர்
+அபிஷேகம் செய்கின்றீர் – என்னை
+
+5. மலைகள் குன்றுகள் விலகினாலும்
+மாறாது உம் கிருபை
+அனாதி சிநேகத்தால் இழுத்துக் கொண்டீர்
+அணைத்து சேர்த்துக் கொண்டீர்
         </div>
     </div>
 
