--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -11,12 +11,21 @@
     </style>
 </head>
 <body>
-    <div class="lyrics-container">
-        <div class="lyrics-controls">
-            <a href="../index.html" class="lyrics-button">← Back</a>
-            <button class="lyrics-button" id="fontToggle">A+</button>
-            <button class="lyrics-button" onclick="window.print()">Print</button>
-        </div>
+  <div class="lyrics-container">
+    <div class="lyrics-controls">
+        <a href="../index.html" class="lyrics-button" aria-label="Return to song list">
+            ← Back
+        </a>
+        <button class="lyrics-button" id="fontToggle" aria-label="Toggle text size">
+            A+
+        </button>
+        <button class="lyrics-button" onclick="window.print()" aria-label="Print this hymn">
+            Print
+        </button>
+    </div>
+
+    <!-- Rest of lyrics content -->
+</div>
 
         <h1>இரத்தக் கோட்டைக்குள்ளே</h1>
         <div class="song-meta">
