--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Hymnal - 100 Songs</title>
+    <title>Church Hymnal - 100 Songs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="app-header">
+    <header class="header">
         <h1>📖 Church Hymnal</h1>
         <div class="controls">
-            <input type="text" id="search" placeholder="Search 100 hymns..." aria-label="Search hymns">
-            <button id="themeToggle" aria-label="Toggle theme">🌓</button>
+            <input type="text" id="search" placeholder="Search hymns..." aria-label="Search songs">
+            <button id="themeToggle">🌓</button>
         </div>
     </header>
 
-    <main id="mainContent">
+    <main class="main-content">
         <div class="song-grid" id="songGrid"></div>
-        <div id="loadingStatus" aria-live="polite">Loading hymn index...</div>
+        <div id="loading">Loading hymn index...</div>
     </main>
 
-    <footer class="app-footer">
-        <p>Used under CCLI License • Colossians 3:16</p>
+    <footer class="footer">
+        <p>Used under CCLI License #YOUR-LICENSE • Colossians 3:16</p>
     </footer>
 
-    <script src="app.js" defer></script>
+    <script src="app.js"></script>
 </body>
 </html>
