--- a/lyrics/song3.html
+++ b/lyrics/song3.html
@@ -23,7 +23,7 @@
 
         <h1>எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே</h1>
         <div class="song-meta">
-            <p>CCLI #12345 • John Newton • Classic Hymn</p>
+           <p>CCLI #12345 • Fr. Berchmans • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
