--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -21,7 +21,7 @@
 
         <h1>இரத்தக் கோட்டைக்குள்ளே</h1>
         <div class="song-meta">
-            <p>CCLI #12345 • John Newton • Classic Hymn</p>
+            <p>NJC Belgium • John Newton • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
