--- a/lyrics/song2.html
+++ b/lyrics/song2.html
@@ -22,7 +22,7 @@
 
         <h1>மறவாமல் நினைத்தீரையா</h1>
         <div class="song-meta">
-            <p>CCLI #12345 • John Newton • Classic Hymn</p>
+            <p>NJC Belgium • John Newton • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
