--- a/lyrics/song3.html
+++ b/lyrics/song3.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே</title>
+    <title>எங்களுக்குள்ளே வாசம் செய்யும்</title>
     <link rel="stylesheet" href="../styles.css">
     <style>
         .large-text .lyrics-content {
@@ -21,7 +21,7 @@
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
 
-        <h1>எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே</h1>
+        <h1>எங்களுக்குள்ளே வாசம் செய்யும்</h1>
         <div class="song-meta">
            <p>NJC Belgium • Fr.Berchmans • Classic Hymn</p>
         </div>
