--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Church Hymnal - 100 Songs</title>
+    <script src="theme.js" defer></script>
+    <script src="app.js" defer></script>
+    <title>NJC SongBook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-        <h1>📖 Church Hymnal</h1>
+        <h1>📖 NJC SongBook</h1>
         <div class="controls">
             <input type="text" id="search" placeholder="Search hymns..." aria-label="Search songs">
             <button id="themeToggle">🌓</button>
