--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Grace</title>
+    <title>A இரத்தக் கோட்டைக்குள்ளே</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="../theme.js" defer></script>
     <script>
@@ -24,7 +24,7 @@
     <div class="lyrics-container">
         <div class="controls-bar">
             <!-- Add theme toggle button here -->
-            <a href="../index.html" class="lyric-btn">← Back</a>
+           
             <button class="lyric-btn" id="fontToggle">A+ Size</button>
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
