--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -22,41 +22,53 @@
 </head>
 <body>
     <div class="lyrics-container">
-        இரத்தக் கோட்டைக்குள்ளே
-நான் நுழைந்து விட்டேன்
-இனி எதுவும் அணுகாது
-எந்தத் தீங்கும் தீண்டாது
-
-1. நேசரின் இரத்தம் என்மேலே
-நெருங்காது சாத்தான்
-பாசமாய் சிலுவையில் பலியானார்
-பாவத்தை வென்று விட்டார்
-
-2. இம்மட்டும் உதவின எபினேசரே
-இனியும் காத்திடுவார்
-உலகிலே இருக்கும் அவனை விட
-என் தேவன் பெரியவரே
-
-3. தேவனே ஒளியும் மீட்புமானார்
-யாருக்கு அஞ்சிடுவேன்
-அவரே என் வாழ்வின் பெலனானார்
-யாருக்கு பயப்படுவேன்
-
-4. தாய் தன் பிள்ளையை மறந்தாலும்
-மறவாத என் நேசரே
-ஆயனைப் போல நடத்துகிறீர்
-அபிஷேகம் செய்கின்றீர் – என்னை
-
-5. மலைகள் குன்றுகள் விலகினாலும்
-மாறாது உம் கிருபை
-அனாதி சிநேகத்தால் இழுத்துக் கொண்டீர்
-அணைத்து சேர்த்துக் கொண்டீர்
+ 
         <div class="controls-bar">
             <!-- Add theme toggle button here -->
            
             <button class="lyric-btn" id="fontToggle">A+ Size</button>
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
+         <h1>எங்களுக்குள்ளே வாசம் செய்யும்</h1>
+        <div class="song-meta">
+           <p>NJC Belgium • Fr.Berchmans • Classic Hymn</p>
+        </div>
+
+        <div class="lyrics-content">
+            எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே
+இந்நாளில் உம் சித்தம் போல் நடத்திச் செல்லுமையா
+ஆவியானவரே ….. ஆவியானவரே….
+பரிசுத்த ஆவியானவரே
+
+எப்படி நான் ஜெபிக்க வேண்டும்
+எதற்காக ஜெபிக்க வேண்டும்
+கற்றுத் தாரும் ஆவியானவரே
+வேத வசனம் புரிந்து கொண்டு
+விளக்கங்களை அறிந்திட
+வெளிச்சம் தாரும் ஆவியானவரே
+
+கவலை கண்ணீர் மறக்கணும்
+கர்த்தரையே நோக்கணும்
+கற்றுத் தாரும் ஆவியானவரே
+செய்த நன்மை நினைக்கணும்
+நன்றியோடு துதிக்கணும்
+சொல்லித் தாரும் ஆவியானவரே
+
+எங்கு செல்ல வேண்டும்
+என்ன சொல்ல வேண்டும்
+வழி நடத்தும் ஆவியானவரே
+உம் விருப்பம் இல்லாத
+இடங்களுக்குச் செல்லாமல்
+தடுத்து நிறுத்தும் ஆவியானவரே
+
+எதிரிகளின் சூழ்ச்சிகள்
+சாத்தானின் தீக்கணைகள்
+எதிர்த்து நிற்க பெலன் வேண்டுமே
+உடல் சோர்வு அசதிகள்
+பெலவீனங்கள் நீக்கி
+உற்சாகத்தால் நிரம்ப வேண்டுமே
+        </div>
+    </div>
                     
     </div>
 </body>
