--- a/lyrics/song2.html
+++ b/lyrics/song2.html
@@ -58,6 +58,7 @@
             <button class="lyric-btn" id="fontToggle">A+ Size</button>
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
+         <div class="lyrics-content">
                     இரத்தக் கோட்டைக்குள்ளே
 நான் நுழைந்து விட்டேன்
 இனி எதுவும் அணுகாது
