--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> இரத்தக் கோட்டைக்குள்ளே</title>
+    <title> இராஜா உம் மாளிகையில்</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="../theme.js" defer></script>
     <script>
@@ -25,7 +25,7 @@
     <div class="lyrics-container">
         <div class="controls-bar">
             <!-- Add theme toggle button here -->
-            <a href="../index.html" class="lyric-btn">← Back</a>
+           
             <button class="lyric-btn" id="fontToggle">A+ Size</button>
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
@@ -34,7 +34,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Grace</title>
+    <title>இராஜா உம் மாளிகையில்</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="../theme.js" defer></script>
     <script>
@@ -60,35 +60,43 @@
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
          <div class="lyrics-content">
-                    இரத்தக் கோட்டைக்குள்ளே
-நான் நுழைந்து விட்டேன்
-இனி எதுவும் அணுகாது
-எந்தத் தீங்கும் தீண்டாது
+          இராஜா உம் மாளிகையில்
+இராப்பகலாய் அமர்ந்திருப்பேன்-இயேச
+துதித்து மகிழ்ந்திருப்பேன்
+துயரம் மறந்திருப்பேன் – உம்மை
 
-1. நேசரின் இரத்தம் என்மேலே
-நெருங்காது சாத்தான்
-பாசமாய் சிலுவையில் பலியானார்
-பாவத்தை வென்று விட்டார்
+ஆராதனை ஆராதனை
+அப்பா அப்பா உங்களுக்குத்தான்
 
-2. இம்மட்டும் உதவின எபினேசரே
-இனியும் காத்திடுவார்
-உலகிலே இருக்கும் அவனை விட
-என் தேவன் பெரியவரே
+1. என் பெலனே என்கோட்டையே
+ஆராதனை உமக்கே
+மறைவிடமே என் உறைவிடமே
+ஆராதனை உமக்கே !
 
-3. தேவனே ஒளியும் மீட்புமானார்
-யாருக்கு அஞ்சிடுவேன்
-அவரே என் வாழ்வின் பெலனானார்
-யாருக்கு பயப்படுவேன்
+2. எங்கும் நிறைந்த யேகோவா ஏலோஹிம்
+ஆராதனை உமக்கே
+எங்கள் நீதியே யேகோவா ஸிட்கேனு
+ஆராதனை உமக்கே !
 
-4. தாய் தன் பிள்ளையை மறந்தாலும்
-மறவாத என் நேசரே
-ஆயனைப் போல நடத்துகிறீர்
-அபிஷேகம் செய்கின்றீர் – என்னை
+3. பரிசுத்தமாக்கும் யேகோவா மெக்காதீஸ்
+ஆராதனை உமக்கே
+உருவாக்கும் தெய்வம் யேகோவா ஓசேனு
+ஆராதனை உமக்கே !
 
-5. மலைகள் குன்றுகள் விலகினாலும்
-மாறாது உம் கிருபை
-அனாதி சிநேகத்தால் இழுத்துக் கொண்டீர்
-அணைத்து சேர்த்துக் கொண்டீர்
+4. உன்னதரே உயர்ந்தவரே
+ஆராதனை உமக்கே
+பரிகாரியே பலியானீரே
+ஆராதனை உமக்கே !
+
+5. சீர்படுத்தும் சிருஷ்டிகரே
+ஆராதனை உமக்கே
+ஸ்திரப்படுத்தும் துணையாளரே
+ஆராதனை உமக்கே !
+
+6. தாழ்மையிலே நினைத்தவரே
+ஆராதனை உமக்கே
+ஏழ்மையை மாற்றினீரே
+ஆராதனை உமக்கே !
     </div>
 </body>
 </html>
