--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="theme.js" defer></script>
-    <script src="app.js" defer></script>
     <title>NJC SongBook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-        <h1>📖 NJC SongBook</h1>
+        <h1></h1>NJC SONGBOOK</h1>
         <div class="controls">
             <input type="text" id="search" placeholder="Search hymns..." aria-label="Search songs">
             <button id="themeToggle">🌓</button>
@@ -23,7 +21,7 @@
     </main>
 
     <footer class="footer">
-        <p>Used under CCLI License #YOUR-LICENSE • Colossians 3:16</p>
+        <p>New Jerusalem Church Belgium</p>
     </footer>
 
     <script src="app.js"></script>
