--- a/lyrics/song3.html
+++ b/lyrics/song3.html
@@ -1,11 +1,10 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>எங்களுக்குள்ளே வாசம் செய்யும்</title>
+    <title>எங்களுக்குள்ளே வாசம் செய்யும்/title>
     <link rel="stylesheet" href="../styles.css">
     <style>
         .large-text .lyrics-content {
@@ -16,18 +15,18 @@
 <body>
     <div class="lyrics-container">
         <div class="controls-bar">
-            
+            <a href="../index.html" class="lyric-btn">← Back</a>
             <button class="lyric-btn" id="fontToggle">A+ Size</button>
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
 
-        <h1>எங்களுக்குள்ளே வாசம் செய்யும்</h1>
+        <h1>எங்களுக்குள்ளே வாசம் செய்யும்/h1>
         <div class="song-meta">
-           <p>NJC Belgium • Fr.Berchmans • Classic Hymn</p>
+            <p>CCLI #12345 • John Newton • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
-            எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே
+எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே
 இந்நாளில் உம் சித்தம் போல் நடத்திச் செல்லுமையா
 ஆவியானவரே ….. ஆவியானவரே….
 பரிசுத்த ஆவியானவரே
