--- a/lyrics/song2.html
+++ b/lyrics/song2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>மறவாமல் நினைத்தீரையா/title>
+    <title>மறவாமல் நினைத்தீரையா</title>
     <link rel="stylesheet" href="../styles.css">
     <style>
         .large-text .lyrics-content {
@@ -19,7 +19,7 @@
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
 
-        <h1>மறவாமல் நினைத்தீரையா/h1>
+        <h1>மறவாமல் நினைத்தீரையா</h1>
         <div class="song-meta">
             <p>CCLI #12345 • John Newton • Classic Hymn</p>
         </div>
