--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>இராஜா உம் மாளிகையில்/title>
+    <title>இராஜா உம் மாளிகையில்</title>
     <link rel="stylesheet" href="../styles.css">
     <style>
         .large-text .lyrics-content {
