--- a/lyrics/song3.html
+++ b/lyrics/song3.html
@@ -28,7 +28,7 @@
         <div class="lyrics-content">
 எங்களுக்குள்ளே வாசம் செய்யும் ஆவியானவரே
 இந்நாளில் உம் சித்தம் போல் நடத்திச் செல்லுமையா
-ஆவியானவரே ….. ஆவியானவரே….
+ஆவியானவரே  ஆவியானவரே….
 பரிசுத்த ஆவியானவரே
 
 எப்படி நான் ஜெபிக்க வேண்டும்
