--- a/lyrics/song3.html
+++ b/lyrics/song3.html
@@ -22,7 +22,7 @@
 
         <h1>எங்களுக்குள்ளே வாசம் செய்யும்</h1>
         <div class="song-meta">
-            <p>CCLI #12345 • John Newton • Classic Hymn</p>
+            <p>NJC Belgium• Fr.Berchmans • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
