--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -21,7 +21,7 @@
 
         <h1>இராஜா உம் மாளிகையில்</h1>
         <div class="song-meta">
-            <p>CCLI #12345 • John Newton • Classic Hymn</p>
+            <p>NJC Belgium• Fr.Berchmans • Classic Hymn</p>
         </div>
 
         <div class="lyrics-content">
