--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NJC SongBook</title>
+    <title>Church Hymnal</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#2c3e50">
+    <script src="theme.js" defer></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
     <header class="header">
-        <h1></h1>NJC SONGBOOK</h1>
+        <h1>📖 Church Hymnal</h1>
         <div class="controls">
-            <input type="text" id="search" placeholder="Search hymns..." aria-label="Search songs">
-            <button id="themeToggle">🌓</button>
+            <input type="text" id="search" placeholder="Search hymns...">
+            <button id="themeToggle">🌙</button>
+            <button id="installButton" class="hidden">Install App</button>
         </div>
     </header>
 
@@ -21,9 +26,12 @@
     </main>
 
     <footer class="footer">
-        <p>New Jerusalem Church Belgium</p>
+        <p>Used under CCLI License • Colossians 3:16</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script>
+        // Add theme toggle listener
+        document.getElementById('themeToggle').addEventListener('click', toggleTheme);
+    </script>
 </body>
 </html>
