--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Georgia&display=swap" rel="stylesheet">
-  <title>Church Hymnal</title>
+    <title>NJC SongBook</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#2c3e50">
-    <script src="theme.js" defer></script>
-    <script src="app.js" defer></script>
 </head>
 <body>
     <header class="header">
-        <h1>📖 Church Hymnal</h1>
+        <h1></h1>NJC SONGBOOK</h1>
         <div class="controls">
-            <input type="text" id="search" placeholder="Search hymns...">
-            <button id="themeToggle">🌙</button>
-            <button id="installButton" class="hidden">Install App</button>
+            <input type="text" id="search" placeholder="Search hymns..." aria-label="Search songs">
+            <button id="themeToggle">🌓</button>
         </div>
     </header>
 
@@ -27,12 +21,9 @@
     </main>
 
     <footer class="footer">
-        <p>Used under CCLI License • Colossians 3:16</p>
+        <p>New Jerusalem Church Belgium</p>
     </footer>
 
-    <script>
-        // Add theme toggle listener
-        document.getElementById('themeToggle').addEventListener('click', toggleTheme);
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
