--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -25,12 +25,12 @@
     </script>
 </head>
 <body>
-    <div class="lyrics-container">
-        <div class="controls-bar">
-            <a href="../index.html" class="lyric-btn">← Back</a>
-            <button class="lyric-btn" id="fontToggle">A+ Size</button>
-            <button class="lyric-btn" onclick="window.print()">Print</button>
-        </div>
+    <div class="controls-bar">
+    <button id="themeToggle" class="lyric-btn">🌙</button>
+    <a href="../index.html" class="lyric-btn">← Back</a>
+    <button class="lyric-btn" id="fontToggle">A+ Size</button>
+    <button class="lyric-btn" onclick="window.print()">Print</button>
+</div>
 
         <h1>Amazing Grace</h1>
         <div class="song-meta">
