--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="controls">
         <input type="text" id="search" placeholder="Search hymns...">
         <button id="themeToggle">🌙</button>
-        <button id="installButton" class="hidden">Install App</button>
+       // <button id="installButton" class="hidden">Install App</button>
     </div>
 </header>
 
