--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -9,27 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Georgia&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#2c3e50">
     <script src="../theme.js" defer></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Add theme toggle button
-            const controlsBar = document.querySelector('.controls-bar');
-            const themeToggle = document.createElement('button');
-            themeToggle.id = 'themeToggle';
-            themeToggle.classList.add('lyric-btn');
-            themeToggle.textContent = currentTheme === 'light' ? '🌙' : '☀️';
-            controlsBar.prepend(themeToggle);
-
-            // Add event listener
-            themeToggle.addEventListener('click', toggleTheme);
-        });
-    </script>
 </head>
 <body>
-    <div class="controls-bar">
-    <button id="themeToggle" class="lyric-btn">🌙</button>
-    <button class="lyric-btn" id="fontToggle">A+ Size</button>
-    <button class="lyric-btn" onclick="window.print()">Print</button>
-</div>
+    <div class="lyrics-container">
+        <!-- Single theme button with proper ID -->
+        <div class="controls-bar">
+            <button id="themeToggle" class="lyric-btn">🌙</button>
+            <a href="../index.html" class="lyric-btn">← Back</a>
+            <button class="lyric-btn" id="fontToggle">A+ Size</button>
+            <button class="lyric-btn" onclick="window.print()">Print</button>
+        </div>
 
         <h1>Amazing Grace</h1>
         <div class="song-meta">
