--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -6,25 +6,21 @@
     <title>Amazing Grace</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="manifest" href="../manifest.json">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Georgia&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#2c3e50">
     <script src="../theme.js" defer></script>
 </head>
 <body>
     <div class="lyrics-container">
-        <!-- Single theme button with proper ID -->
         <div class="controls-bar">
             <button id="themeToggle" class="lyric-btn">🌙</button>
-           
-            <button class="lyric-btn" id="fontToggle">A+ Size</button>
+            <a href="../index.html" class="lyric-btn">← Back</a>
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
 
         <h1>Amazing Grace</h1>
         <div class="song-meta">
-            <p>CCLI #12345 • John Newton • Classic Hymn</p>
+            <p>CCLI #12345 • John Newton</p>
         </div>
-
+        
         <div class="lyrics-content">
             Amazing grace! How sweet the sound
             That saved a wretch like me!
