--- a/lyrics/song1.html
+++ b/lyrics/song1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Grace</title>
+    <title>இராஜா உம் மாளிகையில்</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="manifest" href="../manifest.json">
     <script src="../theme.js" defer></script>
@@ -16,16 +16,49 @@
             <button class="lyric-btn" onclick="window.print()">Print</button>
         </div>
 
-        <h1>Amazing Grace</h1>
+        <h1>இராஜா உம் மாளிகையில்</h1>
         <div class="song-meta">
             <p>CCLI #12345 • John Newton</p>
         </div>
         
         <div class="lyrics-content">
-            Amazing grace! How sweet the sound
-            That saved a wretch like me!
-            I once was lost, but now am found;
-            Was blind, but now I see.
+            Aஇராஜா உம் மாளிகையில்
+இராப்பகலாய் அமர்ந்திருப்பேன் இயேசு
+துதித்து மகிழ்ந்திருப்பேன்
+துயரம் மறந்திருப்பேன் உம்மை
+
+என் பெலனே என் கேட்டையே
+ஆராதனை உமக்கே
+மறைவிடமே என் உறைவிடமே
+ஆராதனை உமக்கே
+
+ஆராதனை ஆராதனை
+அப்பா அப்பா உங்களுக்குத்தான்
+
+எங்கும் நிறைந்த யேகோவா ஏலோஹிம்
+ஆராதனை உமக்கே
+எங்கள் நீதியே யேகோவா ஸிட்கேனு
+ஆராதனை உமக்கே
+
+பரிசுத்தமாக்கும் யேகோவா மெக்காதீஸ்
+ஆராதனை உமக்கே
+உருவாக்கும் தெய்வம் யேகோவா ஓசேனு
+ஆராதனை உமக்கே
+
+சீர்ப்படுத்தும் சிருஷ்டிகரே
+ஆராதனை உமக்கே
+ஸ்திரப்படுத்தும் துணையாளரே
+ஆராதனை உமக்கே
+
+உன்னதரே உயர்ந்தவரே
+ஆராதனை உமக்கே
+பரிகாரியே பலியானீரே
+ஆராதனை உமக்கே
+
+தாழ்மையிலே நினைத்தவரே
+ஆராதனை உமக்கே
+ஏழ்மையை மாற்றினீரே
+ஆராதனை உமக்கே
         </div>
     </div>
 </body>
