--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Mobile Church Songbook</title>
+    <title>NJC Songbook</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
 </head>
@@ -11,7 +11,7 @@
     <div class="app-container">
         <!-- Header -->
         <header class="app-header">
-            <h1>Church Songs</h1>
+            <h1>NJC Song Book</h1>
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Search songs...">
             </div>
