--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>NJC Songs</h1>
+            <h1>NJC SongBook</h1>
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Search songs...">
             </div>
