--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NJC Songbook</title>
+    <title>NJC Song Book</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>NJC SongBook</h1>
+            <h1>புதிய எருசலேம் பாடல் புத்தகம்</h1>
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Search songs...">
             </div>
