--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>புதிய எருசலேம் பாடல் புத்தகம்</h1>
+            <h1>NJC Song Book</h1>
             <div class="search-box">
-                <input type="text" id="searchInput" placeholder="Search songs...">
+                <input type="text" id="searchInput" placeholder="Search songs in Tamil..">
             </div>
         </header>
 
