--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Church Songbook</title>
+    <title>NJC Songbook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="app-container">
         <!-- Header -->
         <header class="app-header">
-            <h1>Church Songs</h1>
+            <h1>NJC Song Book</h1>
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Search songs...">
             </div>
