--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tamil Church Songbook</title>
     <link rel="manifest" href="manifest.json">
+    `<link rel="stylesheet" href="styles.css">`
 </head>
 <body>
     <div class="app-container">
